--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* Allgemeine Stilregeln */
 body {
   font-family: 'Arial', sans-serif;
+   background-color: #f0f0f0;
 }
 
 /* Navbar spezifische Stile */
